--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "enb-source-map",
   "version": "1.3.0",
   "scripts": {
-    "test": "npm run-script jshint && npm run-script check-style",
+    "test": "npm run-script jshint && npm run-script check-style && npm run-script unit",
     "jshint": "jshint .",
-    "check-style": "jscs -c node_modules/enb-validate-code/jscs.json techs"
+    "unit": "mocha tests",
+    "check-style": "jscs -c node_modules/enb-validate-code/jscs.json lib"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,11 @@
   },
   "homepage": "https://github.com/enb-make/enb-source-map",
   "devDependencies": {
+    "chai": "^1.9.1",
+    "enb-validate-code": "0.0.1",
     "jscs": "~1.2.4",
-    "jshint": "~2.4.2",
-    "enb-validate-code": "0.0.1"
+    "jshint": "^2.5.2",
+    "mocha": "^1.20.1"
   },
   "dependencies": {
     "source-map": "^0.1.33",
