--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "atob": "1.1.2"
   },
   "devDependencies": {
-    "chai": "^1.9.1",
+    "chai": "3.2.0",
     "enb-validate-code": "0.0.1",
-    "jscs": "~1.2.4",
-    "jshint": "^2.5.2",
-    "mocha": "^1.20.1"
+    "jscs": "1.4.5",
+    "jshint": "2.8.0",
+    "mocha": "2.2.5"
   }
 }
