--- a/package.json
+++ b/package.json
@@ -1,12 +1,6 @@
 {
   "name": "enb-source-map",
   "version": "1.8.0",
-  "scripts": {
-    "test": "npm run-script jshint && npm run-script check-style && npm run-script unit",
-    "jshint": "jshint .",
-    "unit": "mocha tests",
-    "check-style": "jscs -c jscs.js lib"
-  },
   "repository": {
     "type": "git",
     "url": "git://github.com/enb-make/enb-source-map.git"
@@ -29,5 +23,11 @@
     "mocha": "2.3.4",
     "sinon": "1.17.2",
     "sinon-chai": "2.8.0"
+  },
+  "scripts": {
+    "test": "npm run-script jshint && npm run-script check-style && npm run-script unit",
+    "jshint": "jshint .",
+    "unit": "mocha test",
+    "check-style": "jscs -c jscs.js lib"
   }
 }
