--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "test": "npm run lint && npm run unit",
-    "lint": "jshint . && jscs -c jscs.js lib",
+    "lint": "jshint . && jscs -c jscs.js .",
     "unit": "mocha test"
   }
 }
